test/domains/compilerErrors/notsupportedParsafe-sparse.chpl
use notsupportedCommon;

writeln(dfltRectangularSparseSub.parSafe);
